# n-glcpp

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  model.json  mp_mocap_test.ipynb  mp_webcam_test.ipynb  test.ipynb
docs/: MorphTarget.md
mp_mocap/: __init__.py  mp_helper.py  mp_manager.py
mp_mocap2/: mixamo_data.py  mp_helper.py
playground/export_test/: CMakeLists.txt  main.cpp
py_module/: mixamo_data.py  model_node.py  mp_helper.py  mp_manager.py
scripts/: build_python.bat  build_python_linux.sh  requirements.txt
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/UI/: component_layer.cpp  component_layer.h  hierarchy_layer.cpp  hierarchy_layer.h  imgui_helper.cpp  imgui_helper.h  main_layer.cpp  main_layer.h  scene_layer.cpp  scene_layer.h  text_edit_layer.cpp  text_edit_layer.h  timeline_layer.cpp  timeline_layer.h  ui_context.h
src/animation/: animation.cpp  animation.h  animator.cpp  animator.h  assimp_animation.cpp  assimp_animation.h  bone.cpp  bone.h  json_animation.cpp  json_animation.h  morph_target.cpp  morph_target.h  retargeter.cpp  retargeter.h
src/cpython/: main.cpp  py_manager.cpp  py_manager.h
src/entity/: entity.cpp  entity.h
src/entity/components/: animation_component.cpp  animation_component.h  component.h  ik_control_component.cpp  ik_control_component.h  morphtarget_component.cpp  morphtarget_component.h  pose_component.cpp  pose_component.h  realtime_component.cpp  realtime_component.h  transform_component.cpp  transform_component.h
src/entity/components/renderable/: armature_component.cpp  armature_component.h  mesh_component.cpp  mesh_component.h  polygon_component.cpp  polygon_component.h
src/event/: edit_function.cpp  edit_function.h  event_history.h
src/glcpp/: application.hpp  camera.cpp  camera.h  window.cpp  window.h
src/graphics/: mesh.cpp  mesh.h  post_processing.cpp  post_processing.h  shader.h
src/graphics/opengl/: framebuffer.cpp  framebuffer.h  gl_mesh.cpp  gl_mesh.h  gl_shader.cpp  gl_shader.h  image.cpp  image.h
src/resources/: exporter.cpp  exporter.h  importer.cpp  importer.h  model.cpp  model.h  shared_resources.cpp  shared_resources.h
src/scene/: main_scene.cpp  main_scene.h  scene.hpp
src/thread/: thread_manager.cpp  thread_manager.h
src/util/: log.h  utility.h
